# aura-router

./: .env.example  Cargo.toml  README.md
crates/auth/: Cargo.toml
crates/auth/src/: extractors.rs  jwks.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/domain/proxy/: Cargo.toml
crates/domain/proxy/src/: billing.rs  image_gen.rs  lib.rs  providers.rs  rate_limit.rs  s3.rs  stats.rs  storage.rs  stream.rs  tripo.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs  router.rs  state.rs
crates/server/src/handlers/: generate_3d.rs  image_gen.rs  mod.rs  proxy.rs
docs/: api.md
