[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/auth",
    "crates/server",
    "crates/domain/proxy",
]

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken = "9"
bytes = "1"
futures-util = "0.3"

# Internal crates
aura-router-core = { path = "crates/core" }
aura-router-auth = { path = "crates/auth" }
aura-router-proxy = { path = "crates/domain/proxy" }
