[package]
name = "aura-router-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-router-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
