[package]
name = "aura-router-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
aura-router-core = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
image = { workspace = true }
